--- a/VKFriends/Base.lproj/Main.storyboard
+++ b/VKFriends/Base.lproj/Main.storyboard
@@ -1,26 +1,111 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6qN-zU-zOe">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Map-->
+        <scene sceneID="kur-lK-4p2">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="LPs-QA-x0a" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="nOI-j2-Sbj"/>
+                        <viewControllerLayoutGuide type="bottom" id="UUk-pi-31U"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="59b-mc-6Ig">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wCc-TQ-7sm">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wCc-TQ-7sm" firstAttribute="top" secondItem="nOI-j2-Sbj" secondAttribute="bottom" id="EkR-z9-Nkf"/>
+                            <constraint firstItem="wCc-TQ-7sm" firstAttribute="leading" secondItem="59b-mc-6Ig" secondAttribute="leading" id="KAh-2F-Zb1"/>
+                            <constraint firstItem="UUk-pi-31U" firstAttribute="top" secondItem="wCc-TQ-7sm" secondAttribute="bottom" id="vPv-GN-4Wo"/>
+                            <constraint firstAttribute="trailing" secondItem="wCc-TQ-7sm" secondAttribute="trailing" id="z7l-jv-AIG"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="6DB-yt-Do7"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8YY-Zh-0Hf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="886" y="83"/>
+        </scene>
+        <!--Friends List View Controller-->
+        <scene sceneID="7Nj-E8-ehG">
+            <objects>
+                <viewController id="g5F-xQ-D43" customClass="FriendsListViewController" customModule="VKFriends" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ccf-Fv-btf"/>
+                        <viewControllerLayoutGuide type="bottom" id="D2a-yJ-qA9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PgJ-lV-rJe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mVE-cW-ZHz">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D2a-yJ-qA9" firstAttribute="top" secondItem="mVE-cW-ZHz" secondAttribute="bottom" id="FSq-IE-Q5f"/>
+                            <constraint firstItem="mVE-cW-ZHz" firstAttribute="top" secondItem="ccf-Fv-btf" secondAttribute="bottom" id="FYt-KB-33A"/>
+                            <constraint firstAttribute="trailing" secondItem="mVE-cW-ZHz" secondAttribute="trailing" id="ZNy-e9-Z96"/>
+                            <constraint firstItem="mVE-cW-ZHz" firstAttribute="leading" secondItem="PgJ-lV-rJe" secondAttribute="leading" id="yYA-ku-uRd"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="RM0-WZ-Qg2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lmb-ay-Z87" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1824.8" y="-571.66416791604206"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="QHb-ut-OS3">
+            <objects>
+                <tabBarController id="6qN-zU-zOe" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="RB0-zF-5GK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="wan-4s-QqN" kind="relationship" relationship="viewControllers" id="bCb-bZ-LMJ"/>
+                        <segue destination="LPs-QA-x0a" kind="relationship" relationship="viewControllers" id="yPn-jt-hMC"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JuF-ox-36t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-66" y="-245"/>
+        </scene>
+        <!--List-->
+        <scene sceneID="rxv-NL-07q">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wan-4s-QqN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="List" id="KGR-kr-wlG"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3bz-Jg-wS5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="g5F-xQ-D43" kind="relationship" relationship="rootViewController" id="Lud-6r-Z5Y"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lHm-4u-gXo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="885.60000000000002" y="-571.66416791604206"/>
         </scene>
     </scenes>
 </document>
