--- a/VKFriends/Base.lproj/Main.storyboard
+++ b/VKFriends/Base.lproj/Main.storyboard
@@ -51,29 +51,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DVS-06-Qz5">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mVE-cW-ZHz">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendCell" id="6XW-nc-Ww8" customClass="FriendTableViewCell" customModule="VKFriends" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6XW-nc-Ww8" id="Ufl-pH-kjZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ao7-gB-m06">
+                                                    <rect key="frame" x="16" y="11" width="349" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Ao7-gB-m06" firstAttribute="leading" secondItem="Ufl-pH-kjZ" secondAttribute="leading" constant="16" id="6no-hW-FFN"/>
+                                                <constraint firstItem="Ao7-gB-m06" firstAttribute="centerY" secondItem="Ufl-pH-kjZ" secondAttribute="centerY" id="B0k-DA-vNe"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ao7-gB-m06" secondAttribute="trailing" constant="10" id="hv5-sV-mew"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="Ao7-gB-m06" id="L48-Va-5ck"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="g5F-xQ-D43" id="Zpj-Tb-3f0"/>
+                                    <outlet property="delegate" destination="g5F-xQ-D43" id="cqt-Ta-aMC"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="DVS-06-Qz5" firstAttribute="top" secondItem="ccf-Fv-btf" secondAttribute="bottom" id="0lK-vS-Asb"/>
+                            <constraint firstItem="DVS-06-Qz5" firstAttribute="leading" secondItem="PgJ-lV-rJe" secondAttribute="leading" id="Bad-PD-VJ0"/>
                             <constraint firstItem="D2a-yJ-qA9" firstAttribute="top" secondItem="mVE-cW-ZHz" secondAttribute="bottom" id="FSq-IE-Q5f"/>
                             <constraint firstItem="mVE-cW-ZHz" firstAttribute="top" secondItem="ccf-Fv-btf" secondAttribute="bottom" id="FYt-KB-33A"/>
+                            <constraint firstItem="D2a-yJ-qA9" firstAttribute="top" secondItem="DVS-06-Qz5" secondAttribute="bottom" id="FdW-vi-jOj"/>
                             <constraint firstAttribute="trailing" secondItem="mVE-cW-ZHz" secondAttribute="trailing" id="ZNy-e9-Z96"/>
                             <constraint firstItem="mVE-cW-ZHz" firstAttribute="leading" secondItem="PgJ-lV-rJe" secondAttribute="leading" id="yYA-ku-uRd"/>
+                            <constraint firstAttribute="trailing" secondItem="DVS-06-Qz5" secondAttribute="trailing" id="ywk-O4-PcQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="RM0-WZ-Qg2"/>
+                    <connections>
+                        <outlet property="tableView" destination="mVE-cW-ZHz" id="FrM-zI-Blh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lmb-ay-Z87" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1824.8" y="-571.66416791604206"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main Tab Bar Controller-->
         <scene sceneID="QHb-ut-OS3">
             <objects>
-                <tabBarController id="6qN-zU-zOe" sceneMemberID="viewController">
+                <tabBarController id="6qN-zU-zOe" customClass="MainTabBarController" customModule="VKFriends" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="RB0-zF-5GK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
