--- a/VKFriends/Base.lproj/Main.storyboard
+++ b/VKFriends/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yyY-VW-a5J">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yyY-VW-a5J">
                                                     <rect key="frame" x="10" y="19" width="50" height="49.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="fN0-yV-Dyr"/>
